force-app/main/default/objects/aecm__Stakeholder__c/aecm__Stakeholder__c.object-meta.xml
<CustomObject>
    <description>Container for Tempest Stakeholders.  Is related to other Tempest objects through jump objects which create many-to-many relationships.</description>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>STH-{MM}{YY}{000000}</displayFormat>
        <label>Stakeholder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>