force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Company__c.field-meta.xml
<CustomField>
    <fullName>aecm__Company__c</fullName>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>