force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Department_Internal__c.field-meta.xml
<CustomField>
    <fullName>aecm__Department_Internal__c</fullName>
    <formula>aecm__User__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>