force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Email__c.field-meta.xml
<CustomField>
    <fullName>aecm__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>