force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Email_Internal__c.field-meta.xml
<CustomField>
    <fullName>aecm__Email_Internal__c</fullName>
    <formula>aecm__User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>