force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__First_Name_Internal__c.field-meta.xml
<CustomField>
    <fullName>aecm__First_Name_Internal__c</fullName>
    <formula>aecm__User__r.FirstName</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>