force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Full_Name_Internal__c.field-meta.xml
<CustomField>
    <fullName>aecm__Full_Name_Internal__c</fullName>
    <formula>aecm__First_Name_Internal__c + &quot; &quot; +  aecm__Last_Name_Internal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>