force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Last_Name_Internal__c.field-meta.xml
<CustomField>
    <fullName>aecm__Last_Name_Internal__c</fullName>
    <formula>aecm__User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>