force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>aecm__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>