force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Phone_Number_Internal__c.field-meta.xml
<CustomField>
    <fullName>aecm__Phone_Number_Internal__c</fullName>
    <formula>aecm__User__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>