force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Stakeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Stakeholder_Name__c</fullName>
    <formula>/* Determine if we are in an internal stakeholder record based on the presence of a User object. Set the full name of the stakeholder in this field. This is used in lookup lists to show the full name of the person.*/



IF(RecordType.Name == &quot;External Stakeholder&quot;, aecm__First_Name__c + &quot; &quot; + aecm__Last_Name__c   ,  aecm__First_Name_Internal__c + &quot; &quot; +  aecm__Last_Name_Internal__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stakeholder Name</label>
    <type>Text</type>
</CustomField>