force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Title__c.field-meta.xml
<CustomField>
    <fullName>aecm__Title__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>