force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__Title_Internal__c.field-meta.xml
<CustomField>
    <fullName>aecm__Title_Internal__c</fullName>
    <formula>aecm__User__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>