force-app/main/default/objects/aecm__Stakeholder__c/fields/aecm__User__c.field-meta.xml
<CustomField>
    <fullName>aecm__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Provide an employee user record, which will populate stakeholder information.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>