force-app/main/default/objects/aecm__Stakeholder__c/recordTypes/aecm__External_Stakeholder.recordType-meta.xml
<RecordType>
    <fullName>aecm__External_Stakeholder</fullName>
    <active>true</active>
    <description>Used for external stakeholders, i.e. Vendors, Consultants, ect.</description>
    <label>External Stakeholder</label>
</RecordType>