force-app/main/default/objects/aecm__Stakeholder__c/recordTypes/aecm__Internal_Stakeholder.recordType-meta.xml
<RecordType>
    <fullName>aecm__Internal_Stakeholder</fullName>
    <active>true</active>
    <description>Used for internal stakeholders of the company, i.e. employees.</description>
    <label>Internal Stakeholder</label>
</RecordType>