force-app/main/default/objects/aecm__Stakeholder__c/listViews/aecm__Stakeholder_RACI.listView-meta.xml
<ListView>
    <fullName>aecm__Stakeholder_RACI</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Stakeholder RACI</label>
</ListView>